--- a/playbook/apt.yml
+++ b/playbook/apt.yml
@@ -1,7 +1,10 @@
+---
+# 0 5 * * *
 - hosts: all
-  become: yes 
-  tasks: 
-    - name: apt Update & Upgrade
+  become: true
+  tasks:
+    - name: apt update
       apt:
-        update_cache: yes
         upgrade: yes
+        update_cache: yes
+        clean: yes
