--- a/playbook/seedbox,docker/get_gluetun_port.yml
+++ b/playbook/seedbox,docker/get_gluetun_port.yml
@@ -1,6 +1,6 @@
 ---
 - name: Get Gluetun port
-  hosts: docker
+  hosts: portainer
   gather_facts: false
   tasks:
     - name: Get the Gluetun container port
