--- a/playbook/seedbox,docker/update_portainer_stack.yml
+++ b/playbook/seedbox,docker/update_portainer_stack.yml
@@ -1,6 +1,6 @@
 ---
 - name: Update Portainer stack
-  hosts: docker
+  hosts: portainer
   gather_facts: false
   vars:
     portainer_url: "{{ lookup('env', 'PORTAINER_URL') }}"
