--- a/playbook/update_gluetun.yml
+++ b/playbook/update_gluetun.yml
@@ -1,77 +1,76 @@
 ---
-- name: Update ports for users
-  hosts: seedbox
-  gather_facts: no
+- name: Orchestrate Seedbox and Docker updates
+  hosts: localhost
+  gather_facts: false
+  vars:
+    portainer_url: "{{ lookup('env', 'PORTAINER_URL') }}"
+    portainer_api_key: "{{ lookup('env', 'PORTAINER_API_KEY') }}"
+    users: "{{ lookup('env', 'USERS') | from_json }}"
+    port_changed: false
+
   tasks:
-    - name: Ensure rtorrent.rc file exists
-      file:
-        path: "{{ item.rtorrent_rc }}"
-        state: touch
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
+    - name: Get the Gluetun container port
+      command: docker inspect -f '{{range .NetworkSettings.Ports}}{{.}}{{end}}' gluetun
+      register: gluetun_port_output
+      delegate_to: portainer
 
-    - name: Fetch current port from Docker logs
-      shell: docker logs rutorrent-{{ item.name }}-vpn | grep "port forwarded is" | tail -n1 | awk '{print $NF}'
-      register: current_port
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
-
-    - name: Fetch port from rtorrent.rc
-      slurp:
-        src: "{{ item.rtorrent_rc }}"
-      register: rtorrent_rc_content
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
-    
-    - name: Parse port from rtorrent.rc content
+    - name: Extract port number
       set_fact:
-        current_rtorrent_port: "{{ (item.content | b64decode).split('\n') | select('match', '^network.port_range.set') | list | first | regex_search('network.port_range.set = ([0-9]+)-', '\\1') }}"
-      loop: "{{ rtorrent_rc_content.results }}"
-      loop_control:
-        label: "{{ item.item.name }}"
+        gluetun_port: "{{ gluetun_port_output.stdout | regex_search(':(\\d+)', '\\1') }}"
 
-    - name: Check if ports are different
-      set_fact:
-        port_diff: "{{ (current_port.results[loop.index0].stdout != current_rtorrent_port) | ternary(true, false) }}"
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
+    - name: Fetch port from rtorrent.rc for each user
+      block:
+        - name: Check current port in .rtorrent.rc for users
+          command: grep 'port_range = ' {{ item.rtorrent_rc }}
+          register: current_port
+          loop: "{{ users }}"
+          changed_when: false
+          delegate_to: seedbox
 
-    - name: Update rtorrent.rc if port is different
-      template:
-        src: "templates/rtorrent.rc.j2"
-        dest: "{{ item.rtorrent_rc }}"
-      when: port_diff
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
+        - name: Set port_changed flag if port is different
+          set_fact:
+            port_changed: true
+          when: "'port_range = {{ gluetun_port }}-{{ gluetun_port }}' not in current_port.stdout"
+          loop: "{{ users }}"
 
-- name: Restart Docker stack if port is different
-  hosts: portainer
-  gather_facts: no
-  tasks:
-    - name: Stop Docker stack via Portainer API
-      uri:
-        url: "{{ portainer_url }}/api/stacks/{{ item.stack_id }}/stop?endpointId=2"
-        method: POST
-        headers:
-          X-API-Key: "{{ portainer_api_key }}"
-        status_code: 200
-      when: port_diff
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
-    - name: Start Docker stack via Portainer API
-      uri:
-        url: "{{ portainer_url }}/api/stacks/{{ item.stack_id }}/start?endpointId=2"
-        method: POST
-        headers:
-          X-API-Key: "{{ portainer_api_key }}"
-        status_code: 200
-      when: port_diff
-      loop: "{{ users }}"
-      loop_control:
-        label: "{{ item.name }}"
+        - name: Update .rtorrent.rc for users if port has changed
+          lineinfile:
+            path: "{{ item.rtorrent_rc }}"
+            regexp: 'port_range = '
+            line: "port_range = {{ gluetun_port }}-{{ gluetun_port }}"
+          when: port_changed is defined and port_changed
+          loop: "{{ users }}"
+          delegate_to: seedbox
+
+    - name: Update stacks with new port if port has changed
+      block:
+        - name: Update stacks with new port
+          uri:
+            url: "{{ portainer_url }}/api/stacks/{{ item.stack_id }}/update?endpointId=1"
+            method: PUT
+            headers:
+              Authorization: "Bearer {{ portainer_api_key }}"
+              Content-Type: "application/json"
+            body: '{"env": [{"name": "GLUETUN_PORT", "value": "{{ gluetun_port }}"}]}'
+            body_format: json
+          loop: "{{ users }}"
+          register: update_results
+          when: port_changed is defined and port_changed
+          delegate_to: portainer
+
+        - name: Set restart flag if any stack update has changed
+          set_fact:
+            stack_restart_required: true
+          when: update_results.changed
+          loop: "{{ users }}"
+
+        - name: Restart stacks if needed
+          uri:
+            url: "{{ portainer_url }}/api/stacks/{{ item.stack_id }}/restart?endpointId=1"
+            method: POST
+            headers:
+              Authorization: "Bearer {{ portainer_api_key }}"
+              Content-Type: "application/json"
+          when: stack_restart_required is defined and stack_restart_required
+          loop: "{{ users }}"
+          delegate_to: portainer
