--- a/playbook/update_gluetun.yml
+++ b/playbook/update_gluetun.yml
@@ -9,7 +9,7 @@
 
   tasks:
     - name: Get the Gluetun container port
-      command: docker inspect -f '{{range .NetworkSettings.Ports}}{{.}}{{end}}' gluetun
+      command: docker inspect -f '{{"{{"}}range .NetworkSettings.Ports{{"}}"}}{{"{{"}}.{{"}}"}}{{"{{"}}end{{"}}"}}' gluetun
       register: gluetun_port_output
       delegate_to: portainer
 
