--- a/playbook/update_gluetun.yml
+++ b/playbook/update_gluetun.yml
@@ -11,7 +11,7 @@
     - name: Get the Gluetun container port
       command: docker inspect -f '{{"{{"}}range .NetworkSettings.Ports{{"}}"}}{{"{{"}}.{{"}}"}}{{"{{"}}end{{"}}"}}' gluetun
       register: gluetun_port_output
-      delegate_to: 192.168.50.115 #portainer
+      delegate_to: portainer #portainer
 
     - name: Extract port number
       set_fact:
@@ -23,13 +23,13 @@
           command: grep 'port_range = ' /home/kevin/config/rutorrent-kevin/rtorrent/.rtorrent.rc
           register: current_port_kevin
           changed_when: false
-          delegate_to: 192.168.50.90
+          delegate_to: seedbox
 
         - name: Check current port in .rtorrent.rc for user alexis
           command: grep 'port_range = ' /home/kevin/config/rutorrent-alexis/rtorrent/.rtorrent.rc
           register: current_port_alexis
           changed_when: false
-          delegate_to: 192.168.50.90
+          delegate_to: seedbox
 
         - name: Parse port from rtorrent.rc content for user kevin
           set_fact:
@@ -57,7 +57,7 @@
             regexp: 'port_range = '
             line: "port_range = {{ gluetun_port }}-{{ gluetun_port }}"
           when: port_changed_kevin is defined and port_changed_kevin
-          delegate_to: 192.168.50.90
+          delegate_to: seedbox
 
         - name: Update .rtorrent.rc for user alexis if port has changed
           lineinfile:
@@ -65,7 +65,7 @@
             regexp: 'port_range = '
             line: "port_range = {{ gluetun_port }}-{{ gluetun_port }}"
           when: port_changed_alexis is defined and port_changed_alexis
-          delegate_to: 192.168.50.90
+          delegate_to: seedbox
 
     - name: Update stacks with new port if port has changed
       block:
@@ -80,7 +80,7 @@
             body_format: json
           register: update_result_kevin
           when: port_changed_kevin is defined and port_changed_kevin
-          delegate_to: 192.168.50.115
+          delegate_to: portainer
 
         - name: Update stack for alexis with new port
           uri:
@@ -93,7 +93,7 @@
             body_format: json
           register: update_result_alexis
           when: port_changed_alexis is defined and port_changed_alexis
-          delegate_to: 192.168.50.115
+          delegate_to: portainer
 
         - name: Set restart flag for kevin if stack update has changed
           set_fact:
@@ -113,7 +113,7 @@
               Authorization: "Bearer {{ portainer_api_key }}"
               Content-Type: "application/json"
           when: stack_restart_required_kevin is defined and stack_restart_required_kevin
-          delegate_to: 192.168.50.115
+          delegate_to: portainer
 
         - name: Restart stack for alexis if needed
           uri:
@@ -123,4 +123,4 @@
               Authorization: "Bearer {{ portainer_api_key }}"
               Content-Type: "application/json"
           when: stack_restart_required_alexis is defined and stack_restart_required_alexis
-          delegate_to: 192.168.50.115
+          delegate_to: portainer
